--- a/src/styles.css
+++ b/src/styles.css
@@ -11,13 +11,13 @@ body {
   height: 100%;
   width: 100%;
   background-attachment: fixed;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: "Playwrite IT Moderna", cursive;
 }
 .page {
   display: flexbox;
   width: max-content;
   text-align: center;
-  margin: 35px 400px;
+  margin: 35px auto;
   border: 2px groove transparent;
   border-radius: 10%;
   box-shadow: 5px 7px 5px 7px rgba(128, 128, 128, 0.493);
