--- a/src/styles.css
+++ b/src/styles.css
@@ -49,6 +49,10 @@ h1 {
   font-size: 50px;
   color: white;
 }
+
+.weather-stats {
+  color: #ff1361;
+}
 .today-emoji {
   text-align: right;
   font-size: 75px;
@@ -69,6 +73,7 @@ footer {
   color: white;
   text-align: center;
   margin-bottom: 10px;
+  padding: 20px 15px;
 }
 ul {
   list-style: none;
