Added api for weather icon
created a span id= icon
injecting in js by creating a  variable equal to `img src= "${}"/>;

--- a/src/styles.css
+++ b/src/styles.css
@@ -58,6 +58,10 @@ h1 {
   font-size: 75px;
   margin-top: -60px;
 }
+img {
+  width: 115px;
+  height: 115px;
+}
 .degree {
   text-align: right;
   font-size: 85px;
