--- a/src/styles.css
+++ b/src/styles.css
@@ -72,24 +72,34 @@ img {
   font-size: larger;
   margin-top: -80px;
 }
-
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 10px;
+}
+.weather-forecast-date {
+  text-align: center;
+  color: white;
+  font-size: 16px;
+}
+.weather-forecast-icon {
+  text-align: center;
+  font-size: 35px;
+}
+.weather-forecast-temperatures {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  font-size: 16px;
+  margin-top: 10px;
+}
+.weather-forecast-temperature {
+  padding: 0 10px;
+}
 footer {
   color: white;
   text-align: center;
   margin-bottom: 10px;
   padding: 20px 15px;
-}
-ul {
-  list-style: none;
-}
-.list-container {
-  display: flex;
-  justify-content: center;
-  padding: 10px 25px;
-  margin-top: 70px;
-}
-li {
-  color: white;
-  margin-right: 25px;
-  font-size: 25px;
 }
