--- a/src/styles.css
+++ b/src/styles.css
@@ -83,8 +83,10 @@ img {
   font-size: 16px;
 }
 .weather-forecast-icon {
-  text-align: center;
-  font-size: 35px;
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
 }
 .weather-forecast-temperatures {
   display: flex;
